[dependencies]
anyhow = "1.0"
colored = "2.1"
dialoguer = "0.11"
open = "5.3"
spinners = "4.1"
toml = "0.8"
urlencoding = "2.1"

[dependencies.serde_json]
features = ["preserve_order"]
version = "1.0"

[package]
authors = ["LiterateInk <contact@literate.ink>"]
description = "A tool that automatically bumps the version number, creates a tag, pushes the changes, and generates a GitHub release."
edition = "2021"
license = "MIT"
name = "mentor"
repository = "https://github.com/LiterateInk/Mentor"
version = "0.3.1"
